In-Flight Waypoints 1.2.5
- Minor performance changes.
- Fixed text positioning issue.  For EVERY resolution and EVERY UI scale setting.

In-Flight Waypoints 1.2.4
- Fixed issue with ETA for large distances.

In-Flight Waypoints 1.2.3
- Fixed text positioning to work correctly (or nearly correctly) across all resolutions and UI sizes.

In-Flight Waypoints 1.2.2
- Improved calculation of distance to waypoint - now uses the distance along the planet (instead of through the planet).  (Thanks Peppie23)
- Display ETA to waypoint.  (Thanks Peppie23)
- Move out of the way when altimeter panel pops down (sort of).

In-Flight Waypoints 1.2.1
- Don't display dummy waypoints from orbits.
- Blink active waypoint if the player is within range to complete the contract parameter.

In-Flight Waypoints 1.2.0
- Correctly detect deactivating navigation.
- Allow activating/deactivating navigation by clicking on a waypoint (just like in the map view).

In-Flight Waypoints 1.1.1
- Hide waypoints when the GUI is hidden (thanks DomDiaemus).
- Take terrain height into account for distance calculations (thanks helaeon).

In-Flight Waypoints 1.1.0
- Always show waypoint if it is activated for navigation.
- Display distance information for the active waypoint.

In-Flight Waypoints 1.0.3
- Fix culling issue that caused waypoints that should've been behind the camera to be drawn.

In-Flight Waypoints 1.0.2
- Include LICENSE.txt in download.

In-Flight Waypoints 1.0.1
- Fixed name in version file.

In-Flight Waypoints 1.0.0
- Initial release.