@@ -1,6 +1,7 @@
 In-Flight Waypoints 1.2.5
 - Minor performance changes.
 - Fixed text positioning issue.  For EVERY resolution and EVERY UI scale setting.
+- Anti-derp fix - Don't display ETA if it's greater than a day.
 
 In-Flight Waypoints 1.2.4
 - Fixed issue with ETA for large distances.
